--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="title_activity_setup2">Setup2Activity</string>
     <string name="title_activity_setup3">Setup3Activity</string>
     <string name="title_activity_setup4">Setup4Activity</string>
+    <string name="title_activity_base_setup">BaseSetupActivity</string>
+    <string name="title_activity_contacts">ContactsActivity</string>
 
 </resources>
