--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="title_activity_setup4">Setup4Activity</string>
     <string name="title_activity_base_setup">BaseSetupActivity</string>
     <string name="title_activity_contacts">ContactsActivity</string>
+    <string name="title_activity_atools">AToolsActivity</string>
+    <string name="title_activity_address">AddressActivity</string>
+    <string name="title_activity_drag_view">DragViewActivity</string>
 
 </resources>
