--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_atools">AToolsActivity</string>
     <string name="title_activity_address">AddressActivity</string>
     <string name="title_activity_drag_view">DragViewActivity</string>
+    <string name="title_activity_call_safe">CallSafeActivity</string>
 
 </resources>
