--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="title_activity_address">AddressActivity</string>
     <string name="title_activity_drag_view">DragViewActivity</string>
     <string name="title_activity_call_safe">CallSafeActivity</string>
+    <string name="title_activity_app_manager">AppManagerActivity</string>
+    <string name="title_activity_task_manager">TaskManagerActivity</string>
+    <string name="title_activity_task_manager_setting">TaskManagerSettingActivity</string>
 
 </resources>
