手机卫士第十一天

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="title_activity_app_manager">AppManagerActivity</string>
     <string name="title_activity_task_manager">TaskManagerActivity</string>
     <string name="title_activity_task_manager_setting">TaskManagerSettingActivity</string>
+    <string name="title_activity_antivirus">AntivirusActivity</string>
 
 </resources>
